# GLRenderer_Core

./: list.TODO
src/: CMakeLists.txt
src/GLCore/GLsetup/: buffer.hpp  vao.hpp  vbo.hpp
testing/: CMakeLists.txt  main.cpp
